fix error reload page on mobile menu

--- a/src/components/ExploreTab/ExploreTab.module.scss
+++ b/src/components/ExploreTab/ExploreTab.module.scss
@@ -80,3 +80,10 @@
         background-color: rgb(214, 244, 255);
     }
 }
+
+
+@media (min-width: 1024px) {
+    .MobileStickySearchAndFilterContainer {
+        display: none;
+    }
+}
